talpid-core/src/logging/snapshots/talpid_core__logging__diag__windows__test__pnputil_output.snap
---
source: talpid-core/src/logging/diag.rs
expression: formatted_logs
snapshot_kind: text
---
pnputil.exe "/enum-devices" "/class" "{4d36e972-e325-11ce-bfc1-08002be10318}" "/format" "csv" (filtered)
--------
InstanceId,DeviceDescription,Status,ProblemCode,ProblemStatus,DriverName
"ROOT\WINTUN\0000","Wintun Userspace Tunnel","Started","","","oem2.inf"
--------
